resources/dsaas/dsaas-production/rhche.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: rhche-redirector
  name: rhche
spec:
  host: rhche.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhche-redirector
    weight: 100
  wildcardPolicy: None
